Kaggle Notebook | mcts-catboost-baseline | Version 15

--- a/kaggle/mcts-catboost-baseline.ipynb
+++ b/kaggle/mcts-catboost-baseline.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5eff7829",
+   "id": "2ebd4ab3",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:21:28.289904Z",
-     "iopub.status.busy": "2024-11-16T17:21:28.289483Z",
-     "iopub.status.idle": "2024-11-16T17:21:31.031075Z",
-     "shell.execute_reply": "2024-11-16T17:21:31.029768Z"
+     "iopub.execute_input": "2024-11-16T17:22:12.526059Z",
+     "iopub.status.busy": "2024-11-16T17:22:12.525140Z",
+     "iopub.status.idle": "2024-11-16T17:22:14.973814Z",
+     "shell.execute_reply": "2024-11-16T17:22:14.972899Z"
     },
     "papermill": {
-     "duration": 2.750808,
-     "end_time": "2024-11-16T17:21:31.033733",
+     "duration": 2.456409,
+     "end_time": "2024-11-16T17:22:14.976073",
      "exception": false,
-     "start_time": "2024-11-16T17:21:28.282925",
+     "start_time": "2024-11-16T17:22:12.519664",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35d04c48",
+   "id": "918c6571",
    "metadata": {
     "papermill": {
-     "duration": 0.00425,
-     "end_time": "2024-11-16T17:21:31.042961",
+     "duration": 0.003469,
+     "end_time": "2024-11-16T17:22:14.982960",
      "exception": false,
-     "start_time": "2024-11-16T17:21:31.038711",
+     "start_time": "2024-11-16T17:22:14.979491",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d0368f87",
+   "id": "eee57d95",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:21:31.054537Z",
-     "iopub.status.busy": "2024-11-16T17:21:31.053359Z",
-     "iopub.status.idle": "2024-11-16T17:21:36.880019Z",
-     "shell.execute_reply": "2024-11-16T17:21:36.878904Z"
+     "iopub.execute_input": "2024-11-16T17:22:14.991099Z",
+     "iopub.status.busy": "2024-11-16T17:22:14.990616Z",
+     "iopub.status.idle": "2024-11-16T17:22:19.941329Z",
+     "shell.execute_reply": "2024-11-16T17:22:19.940232Z"
     },
     "papermill": {
-     "duration": 5.835432,
-     "end_time": "2024-11-16T17:21:36.882867",
+     "duration": 4.957692,
+     "end_time": "2024-11-16T17:22:19.943906",
      "exception": false,
-     "start_time": "2024-11-16T17:21:31.047435",
+     "start_time": "2024-11-16T17:22:14.986214",
      "status": "completed"
     },
     "tags": []
@@ -100,19 +100,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7a8e0f0e",
+   "id": "ccf37c3c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:21:36.894206Z",
-     "iopub.status.busy": "2024-11-16T17:21:36.893711Z",
-     "iopub.status.idle": "2024-11-16T17:21:36.901984Z",
-     "shell.execute_reply": "2024-11-16T17:21:36.900929Z"
+     "iopub.execute_input": "2024-11-16T17:22:19.952158Z",
+     "iopub.status.busy": "2024-11-16T17:22:19.951772Z",
+     "iopub.status.idle": "2024-11-16T17:22:19.959441Z",
+     "shell.execute_reply": "2024-11-16T17:22:19.958426Z"
     },
     "papermill": {
-     "duration": 0.016877,
-     "end_time": "2024-11-16T17:21:36.904548",
+     "duration": 0.014014,
+     "end_time": "2024-11-16T17:22:19.961408",
      "exception": false,
-     "start_time": "2024-11-16T17:21:36.887671",
+     "start_time": "2024-11-16T17:22:19.947394",
      "status": "completed"
     },
     "tags": []
@@ -136,19 +136,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "73e14fd1",
+   "id": "621edf41",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:21:36.916487Z",
-     "iopub.status.busy": "2024-11-16T17:21:36.915379Z",
-     "iopub.status.idle": "2024-11-16T17:21:36.930081Z",
-     "shell.execute_reply": "2024-11-16T17:21:36.929055Z"
+     "iopub.execute_input": "2024-11-16T17:22:19.969847Z",
+     "iopub.status.busy": "2024-11-16T17:22:19.969481Z",
+     "iopub.status.idle": "2024-11-16T17:22:19.980893Z",
+     "shell.execute_reply": "2024-11-16T17:22:19.979700Z"
     },
     "papermill": {
-     "duration": 0.023561,
-     "end_time": "2024-11-16T17:21:36.932979",
+     "duration": 0.018506,
+     "end_time": "2024-11-16T17:22:19.983297",
      "exception": false,
-     "start_time": "2024-11-16T17:21:36.909418",
+     "start_time": "2024-11-16T17:22:19.964791",
      "status": "completed"
     },
     "tags": []
@@ -232,9 +232,9 @@
     "# model_catboost = ModelInference(text_cols=[\"LudRules\",], **catboost_artifacts)\n",
     "\n",
     "model_catboost = ModelInference(\n",
-    "    models=catboost_artifacts[\"models\"][:5],\n",
+    "    # models=catboost_artifacts[\"models\"][:5],\n",
     "    # models=catboost_artifacts[\"models\"][5:10],\n",
-    "    # models=catboost_artifacts[\"models\"][10:],\n",
+    "    models=catboost_artifacts[\"models\"][10:],\n",
     "    # models=catboost_artifacts[\"models\"],\n",
     "    numerical_cols=catboost_artifacts[\"numerical_cols\"],\n",
     "    categorical_cols=catboost_artifacts[\"categorical_cols\"],\n",
@@ -247,19 +247,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "776135a6",
+   "id": "0a7df208",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:21:36.944643Z",
-     "iopub.status.busy": "2024-11-16T17:21:36.944001Z",
-     "iopub.status.idle": "2024-11-16T17:21:37.184162Z",
-     "shell.execute_reply": "2024-11-16T17:21:37.182966Z"
+     "iopub.execute_input": "2024-11-16T17:22:19.992906Z",
+     "iopub.status.busy": "2024-11-16T17:22:19.992470Z",
+     "iopub.status.idle": "2024-11-16T17:22:20.183069Z",
+     "shell.execute_reply": "2024-11-16T17:22:20.182081Z"
     },
     "papermill": {
-     "duration": 0.249112,
-     "end_time": "2024-11-16T17:21:37.186961",
+     "duration": 0.197767,
+     "end_time": "2024-11-16T17:22:20.185142",
      "exception": false,
-     "start_time": "2024-11-16T17:21:36.937849",
+     "start_time": "2024-11-16T17:22:19.987375",
      "status": "completed"
     },
     "tags": []
@@ -268,7 +268,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.1216964 , -0.12935903, -0.08922361])"
+       "array([ 0.09898722, -0.11853446, -0.0268187 ])"
       ]
      },
      "execution_count": 5,
@@ -284,13 +284,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6874aef2",
+   "id": "9a5f3f3e",
    "metadata": {
     "papermill": {
-     "duration": 0.004665,
-     "end_time": "2024-11-16T17:21:37.196823",
+     "duration": 0.003532,
+     "end_time": "2024-11-16T17:22:20.192328",
      "exception": false,
-     "start_time": "2024-11-16T17:21:37.192158",
+     "start_time": "2024-11-16T17:22:20.188796",
      "status": "completed"
     },
     "tags": []
@@ -303,19 +303,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a15ad607",
+   "id": "7ed64726",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:21:37.208355Z",
-     "iopub.status.busy": "2024-11-16T17:21:37.207944Z",
-     "iopub.status.idle": "2024-11-16T17:21:37.655834Z",
-     "shell.execute_reply": "2024-11-16T17:21:37.654849Z"
+     "iopub.execute_input": "2024-11-16T17:22:20.200934Z",
+     "iopub.status.busy": "2024-11-16T17:22:20.200559Z",
+     "iopub.status.idle": "2024-11-16T17:22:20.626223Z",
+     "shell.execute_reply": "2024-11-16T17:22:20.624563Z"
     },
     "papermill": {
-     "duration": 0.456915,
-     "end_time": "2024-11-16T17:21:37.658608",
+     "duration": 0.433889,
+     "end_time": "2024-11-16T17:22:20.629721",
      "exception": false,
-     "start_time": "2024-11-16T17:21:37.201693",
+     "start_time": "2024-11-16T17:22:20.195832",
      "status": "completed"
     },
     "tags": []
@@ -330,19 +330,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b8eb568c",
+   "id": "6f8554b2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:21:37.670745Z",
-     "iopub.status.busy": "2024-11-16T17:21:37.670184Z",
-     "iopub.status.idle": "2024-11-16T17:21:37.676454Z",
-     "shell.execute_reply": "2024-11-16T17:21:37.675294Z"
+     "iopub.execute_input": "2024-11-16T17:22:20.642492Z",
+     "iopub.status.busy": "2024-11-16T17:22:20.641979Z",
+     "iopub.status.idle": "2024-11-16T17:22:20.647422Z",
+     "shell.execute_reply": "2024-11-16T17:22:20.646413Z"
     },
     "papermill": {
-     "duration": 0.014967,
-     "end_time": "2024-11-16T17:21:37.678786",
+     "duration": 0.014194,
+     "end_time": "2024-11-16T17:22:20.649374",
      "exception": false,
-     "start_time": "2024-11-16T17:21:37.663819",
+     "start_time": "2024-11-16T17:22:20.635180",
      "status": "completed"
     },
     "tags": []
@@ -359,19 +359,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3f9ee431",
+   "id": "1da15f3c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:21:37.691174Z",
-     "iopub.status.busy": "2024-11-16T17:21:37.690219Z",
-     "iopub.status.idle": "2024-11-16T17:21:38.287435Z",
-     "shell.execute_reply": "2024-11-16T17:21:38.286401Z"
+     "iopub.execute_input": "2024-11-16T17:22:20.658196Z",
+     "iopub.status.busy": "2024-11-16T17:22:20.657506Z",
+     "iopub.status.idle": "2024-11-16T17:22:21.164854Z",
+     "shell.execute_reply": "2024-11-16T17:22:21.163783Z"
     },
     "papermill": {
-     "duration": 0.606111,
-     "end_time": "2024-11-16T17:21:38.290036",
+     "duration": 0.514081,
+     "end_time": "2024-11-16T17:22:21.166991",
      "exception": false,
-     "start_time": "2024-11-16T17:21:37.683925",
+     "start_time": "2024-11-16T17:22:20.652910",
      "status": "completed"
     },
     "tags": []
@@ -393,13 +393,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7257b06",
+   "id": "d75b1448",
    "metadata": {
     "papermill": {
-     "duration": 0.005561,
-     "end_time": "2024-11-16T17:21:38.300557",
+     "duration": 0.004071,
+     "end_time": "2024-11-16T17:22:21.174764",
      "exception": false,
-     "start_time": "2024-11-16T17:21:38.294996",
+     "start_time": "2024-11-16T17:22:21.170693",
      "status": "completed"
     },
     "tags": []
@@ -449,14 +449,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 13.788346,
-   "end_time": "2024-11-16T17:21:39.127047",
+   "duration": 11.855649,
+   "end_time": "2024-11-16T17:22:21.898809",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-16T17:21:25.338701",
+   "start_time": "2024-11-16T17:22:10.043160",
    "version": "2.6.0"
   }
  },
