Kaggle Notebook | mcts-catboost-baseline | Version 16

--- a/kaggle/mcts-catboost-baseline.ipynb
+++ b/kaggle/mcts-catboost-baseline.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2ebd4ab3",
+   "id": "af000bff",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:22:12.526059Z",
-     "iopub.status.busy": "2024-11-16T17:22:12.525140Z",
-     "iopub.status.idle": "2024-11-16T17:22:14.973814Z",
-     "shell.execute_reply": "2024-11-16T17:22:14.972899Z"
+     "iopub.execute_input": "2024-11-18T20:04:50.424106Z",
+     "iopub.status.busy": "2024-11-18T20:04:50.423653Z",
+     "iopub.status.idle": "2024-11-18T20:04:53.177076Z",
+     "shell.execute_reply": "2024-11-18T20:04:53.175868Z"
     },
     "papermill": {
-     "duration": 2.456409,
-     "end_time": "2024-11-16T17:22:14.976073",
+     "duration": 2.760799,
+     "end_time": "2024-11-18T20:04:53.179273",
      "exception": false,
-     "start_time": "2024-11-16T17:22:12.519664",
+     "start_time": "2024-11-18T20:04:50.418474",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "918c6571",
+   "id": "320a4ade",
    "metadata": {
     "papermill": {
-     "duration": 0.003469,
-     "end_time": "2024-11-16T17:22:14.982960",
+     "duration": 0.002753,
+     "end_time": "2024-11-18T20:04:53.185298",
      "exception": false,
-     "start_time": "2024-11-16T17:22:14.979491",
+     "start_time": "2024-11-18T20:04:53.182545",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "eee57d95",
+   "id": "930c4e7c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:22:14.991099Z",
-     "iopub.status.busy": "2024-11-16T17:22:14.990616Z",
-     "iopub.status.idle": "2024-11-16T17:22:19.941329Z",
-     "shell.execute_reply": "2024-11-16T17:22:19.940232Z"
+     "iopub.execute_input": "2024-11-18T20:04:53.192733Z",
+     "iopub.status.busy": "2024-11-18T20:04:53.192239Z",
+     "iopub.status.idle": "2024-11-18T20:04:56.612266Z",
+     "shell.execute_reply": "2024-11-18T20:04:56.610912Z"
     },
     "papermill": {
-     "duration": 4.957692,
-     "end_time": "2024-11-16T17:22:19.943906",
+     "duration": 3.42883,
+     "end_time": "2024-11-18T20:04:56.616966",
      "exception": false,
-     "start_time": "2024-11-16T17:22:14.986214",
+     "start_time": "2024-11-18T20:04:53.188136",
      "status": "completed"
     },
     "tags": []
@@ -100,19 +100,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ccf37c3c",
+   "id": "81284cca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:22:19.952158Z",
-     "iopub.status.busy": "2024-11-16T17:22:19.951772Z",
-     "iopub.status.idle": "2024-11-16T17:22:19.959441Z",
-     "shell.execute_reply": "2024-11-16T17:22:19.958426Z"
+     "iopub.execute_input": "2024-11-18T20:04:56.633574Z",
+     "iopub.status.busy": "2024-11-18T20:04:56.632845Z",
+     "iopub.status.idle": "2024-11-18T20:04:56.644115Z",
+     "shell.execute_reply": "2024-11-18T20:04:56.642946Z"
     },
     "papermill": {
-     "duration": 0.014014,
-     "end_time": "2024-11-16T17:22:19.961408",
+     "duration": 0.022005,
+     "end_time": "2024-11-18T20:04:56.646254",
      "exception": false,
-     "start_time": "2024-11-16T17:22:19.947394",
+     "start_time": "2024-11-18T20:04:56.624249",
      "status": "completed"
     },
     "tags": []
@@ -121,7 +121,7 @@
     {
      "data": {
       "text/plain": [
-       "15"
+       "5"
       ]
      },
      "execution_count": 3,
@@ -136,19 +136,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "621edf41",
+   "id": "19d9858c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:22:19.969847Z",
-     "iopub.status.busy": "2024-11-16T17:22:19.969481Z",
-     "iopub.status.idle": "2024-11-16T17:22:19.980893Z",
-     "shell.execute_reply": "2024-11-16T17:22:19.979700Z"
+     "iopub.execute_input": "2024-11-18T20:04:56.655239Z",
+     "iopub.status.busy": "2024-11-18T20:04:56.654803Z",
+     "iopub.status.idle": "2024-11-18T20:04:56.668855Z",
+     "shell.execute_reply": "2024-11-18T20:04:56.667803Z"
     },
     "papermill": {
-     "duration": 0.018506,
-     "end_time": "2024-11-16T17:22:19.983297",
+     "duration": 0.021709,
+     "end_time": "2024-11-18T20:04:56.671354",
      "exception": false,
-     "start_time": "2024-11-16T17:22:19.964791",
+     "start_time": "2024-11-18T20:04:56.649645",
      "status": "completed"
     },
     "tags": []
@@ -158,7 +158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(numerical_cols): 368\n",
+      "len(numerical_cols): 370\n",
       "len(categorical_cols): 5\n"
      ]
     }
@@ -203,7 +203,7 @@
     "            self.encoder,\n",
     "            self.scaler,\n",
     "            include_position_features=True,\n",
-    "            include_text_features=False,\n",
+    "            include_text_features=True,\n",
     "        )\n",
     "        \n",
     "        # Create CatBoost Pool for test data\n",
@@ -234,11 +234,11 @@
     "model_catboost = ModelInference(\n",
     "    # models=catboost_artifacts[\"models\"][:5],\n",
     "    # models=catboost_artifacts[\"models\"][5:10],\n",
-    "    models=catboost_artifacts[\"models\"][10:],\n",
-    "    # models=catboost_artifacts[\"models\"],\n",
+    "    # models=catboost_artifacts[\"models\"][10:],\n",
+    "    models=catboost_artifacts[\"models\"],\n",
     "    numerical_cols=catboost_artifacts[\"numerical_cols\"],\n",
     "    categorical_cols=catboost_artifacts[\"categorical_cols\"],\n",
-    "    # text_cols=[\"LudRules\"],\n",
+    "    text_cols=[\"LudRules\"],\n",
     "    encoder=catboost_artifacts[\"encoder\"],\n",
     "    scaler=catboost_artifacts[\"scaler\"],\n",
     ")"
@@ -247,19 +247,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0a7df208",
+   "id": "7e16201d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:22:19.992906Z",
-     "iopub.status.busy": "2024-11-16T17:22:19.992470Z",
-     "iopub.status.idle": "2024-11-16T17:22:20.183069Z",
-     "shell.execute_reply": "2024-11-16T17:22:20.182081Z"
+     "iopub.execute_input": "2024-11-18T20:04:56.680013Z",
+     "iopub.status.busy": "2024-11-18T20:04:56.679466Z",
+     "iopub.status.idle": "2024-11-18T20:04:56.899714Z",
+     "shell.execute_reply": "2024-11-18T20:04:56.898723Z"
     },
     "papermill": {
-     "duration": 0.197767,
-     "end_time": "2024-11-16T17:22:20.185142",
+     "duration": 0.227423,
+     "end_time": "2024-11-18T20:04:56.902073",
      "exception": false,
-     "start_time": "2024-11-16T17:22:19.987375",
+     "start_time": "2024-11-18T20:04:56.674650",
      "status": "completed"
     },
     "tags": []
@@ -268,7 +268,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.09898722, -0.11853446, -0.0268187 ])"
+       "array([ 0.14739358, -0.1419315 , -0.06667329])"
       ]
      },
      "execution_count": 5,
@@ -284,13 +284,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a5f3f3e",
+   "id": "a7597e1d",
    "metadata": {
     "papermill": {
-     "duration": 0.003532,
-     "end_time": "2024-11-16T17:22:20.192328",
+     "duration": 0.003057,
+     "end_time": "2024-11-18T20:04:56.908479",
      "exception": false,
-     "start_time": "2024-11-16T17:22:20.188796",
+     "start_time": "2024-11-18T20:04:56.905422",
      "status": "completed"
     },
     "tags": []
@@ -303,19 +303,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7ed64726",
+   "id": "82531b0b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:22:20.200934Z",
-     "iopub.status.busy": "2024-11-16T17:22:20.200559Z",
-     "iopub.status.idle": "2024-11-16T17:22:20.626223Z",
-     "shell.execute_reply": "2024-11-16T17:22:20.624563Z"
+     "iopub.execute_input": "2024-11-18T20:04:56.916437Z",
+     "iopub.status.busy": "2024-11-18T20:04:56.916039Z",
+     "iopub.status.idle": "2024-11-18T20:04:57.418979Z",
+     "shell.execute_reply": "2024-11-18T20:04:57.417708Z"
     },
     "papermill": {
-     "duration": 0.433889,
-     "end_time": "2024-11-16T17:22:20.629721",
+     "duration": 0.509897,
+     "end_time": "2024-11-18T20:04:57.421531",
      "exception": false,
-     "start_time": "2024-11-16T17:22:20.195832",
+     "start_time": "2024-11-18T20:04:56.911634",
      "status": "completed"
     },
     "tags": []
@@ -330,19 +330,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6f8554b2",
+   "id": "ec9e4731",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:22:20.642492Z",
-     "iopub.status.busy": "2024-11-16T17:22:20.641979Z",
-     "iopub.status.idle": "2024-11-16T17:22:20.647422Z",
-     "shell.execute_reply": "2024-11-16T17:22:20.646413Z"
+     "iopub.execute_input": "2024-11-18T20:04:57.430224Z",
+     "iopub.status.busy": "2024-11-18T20:04:57.429686Z",
+     "iopub.status.idle": "2024-11-18T20:04:57.435368Z",
+     "shell.execute_reply": "2024-11-18T20:04:57.434307Z"
     },
     "papermill": {
-     "duration": 0.014194,
-     "end_time": "2024-11-16T17:22:20.649374",
+     "duration": 0.012247,
+     "end_time": "2024-11-18T20:04:57.437433",
      "exception": false,
-     "start_time": "2024-11-16T17:22:20.635180",
+     "start_time": "2024-11-18T20:04:57.425186",
      "status": "completed"
     },
     "tags": []
@@ -359,19 +359,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1da15f3c",
+   "id": "dbfe42bd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-16T17:22:20.658196Z",
-     "iopub.status.busy": "2024-11-16T17:22:20.657506Z",
-     "iopub.status.idle": "2024-11-16T17:22:21.164854Z",
-     "shell.execute_reply": "2024-11-16T17:22:21.163783Z"
+     "iopub.execute_input": "2024-11-18T20:04:57.446412Z",
+     "iopub.status.busy": "2024-11-18T20:04:57.445359Z",
+     "iopub.status.idle": "2024-11-18T20:04:58.087327Z",
+     "shell.execute_reply": "2024-11-18T20:04:58.086259Z"
     },
     "papermill": {
-     "duration": 0.514081,
-     "end_time": "2024-11-16T17:22:21.166991",
+     "duration": 0.648972,
+     "end_time": "2024-11-18T20:04:58.089737",
      "exception": false,
-     "start_time": "2024-11-16T17:22:20.652910",
+     "start_time": "2024-11-18T20:04:57.440765",
      "status": "completed"
     },
     "tags": []
@@ -393,13 +393,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d75b1448",
+   "id": "453f0b1d",
    "metadata": {
     "papermill": {
-     "duration": 0.004071,
-     "end_time": "2024-11-16T17:22:21.174764",
+     "duration": 0.00396,
+     "end_time": "2024-11-18T20:04:58.097455",
      "exception": false,
-     "start_time": "2024-11-16T17:22:21.170693",
+     "start_time": "2024-11-18T20:04:58.093495",
      "status": "completed"
     },
     "tags": []
@@ -420,7 +420,7 @@
     },
     {
      "datasetId": 5909723,
-     "sourceId": 9917814,
+     "sourceId": 9945169,
      "sourceType": "datasetVersion"
     }
    ],
@@ -449,14 +449,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 11.855649,
-   "end_time": "2024-11-16T17:22:21.898809",
+   "duration": 11.046243,
+   "end_time": "2024-11-18T20:04:58.821613",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-16T17:22:10.043160",
+   "start_time": "2024-11-18T20:04:47.775370",
    "version": "2.6.0"
   }
  },
