--- a/kaggle/mcts-catboost-baseline.ipynb
+++ b/kaggle/mcts-catboost-baseline.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "af000bff",
+   "id": "31b49f1a",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2024-11-18T20:04:50.424106Z",
-     "iopub.status.busy": "2024-11-18T20:04:50.423653Z",
-     "iopub.status.idle": "2024-11-18T20:04:53.177076Z",
-     "shell.execute_reply": "2024-11-18T20:04:53.175868Z"
+     "iopub.execute_input": "2024-11-19T13:57:01.189358Z",
+     "iopub.status.busy": "2024-11-19T13:57:01.188932Z",
+     "iopub.status.idle": "2024-11-19T13:57:04.454548Z",
+     "shell.execute_reply": "2024-11-19T13:57:04.453229Z"
     },
     "papermill": {
-     "duration": 2.760799,
-     "end_time": "2024-11-18T20:04:53.179273",
+     "duration": 3.274574,
+     "end_time": "2024-11-19T13:57:04.457172",
      "exception": false,
-     "start_time": "2024-11-18T20:04:50.418474",
+     "start_time": "2024-11-19T13:57:01.182598",
      "status": "completed"
     },
     "tags": []
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "320a4ade",
+   "id": "95d39309",
    "metadata": {
     "papermill": {
-     "duration": 0.002753,
-     "end_time": "2024-11-18T20:04:53.185298",
+     "duration": 0.002915,
+     "end_time": "2024-11-19T13:57:04.463561",
      "exception": false,
-     "start_time": "2024-11-18T20:04:53.182545",
+     "start_time": "2024-11-19T13:57:04.460646",
      "status": "completed"
     },
     "tags": []
@@ -70,19 +70,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "930c4e7c",
+   "id": "aab11f31",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-18T20:04:53.192733Z",
-     "iopub.status.busy": "2024-11-18T20:04:53.192239Z",
-     "iopub.status.idle": "2024-11-18T20:04:56.612266Z",
-     "shell.execute_reply": "2024-11-18T20:04:56.610912Z"
+     "iopub.execute_input": "2024-11-19T13:57:04.471871Z",
+     "iopub.status.busy": "2024-11-19T13:57:04.471291Z",
+     "iopub.status.idle": "2024-11-19T13:57:06.748443Z",
+     "shell.execute_reply": "2024-11-19T13:57:06.746938Z"
     },
     "papermill": {
-     "duration": 3.42883,
-     "end_time": "2024-11-18T20:04:56.616966",
+     "duration": 2.28647,
+     "end_time": "2024-11-19T13:57:06.753189",
      "exception": false,
-     "start_time": "2024-11-18T20:04:53.188136",
+     "start_time": "2024-11-19T13:57:04.466719",
      "status": "completed"
     },
     "tags": []
@@ -100,19 +100,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "81284cca",
+   "id": "28c2bfec",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-18T20:04:56.633574Z",
-     "iopub.status.busy": "2024-11-18T20:04:56.632845Z",
-     "iopub.status.idle": "2024-11-18T20:04:56.644115Z",
-     "shell.execute_reply": "2024-11-18T20:04:56.642946Z"
+     "iopub.execute_input": "2024-11-19T13:57:06.767472Z",
+     "iopub.status.busy": "2024-11-19T13:57:06.766590Z",
+     "iopub.status.idle": "2024-11-19T13:57:06.778518Z",
+     "shell.execute_reply": "2024-11-19T13:57:06.777446Z"
     },
     "papermill": {
-     "duration": 0.022005,
-     "end_time": "2024-11-18T20:04:56.646254",
+     "duration": 0.024251,
+     "end_time": "2024-11-19T13:57:06.783424",
      "exception": false,
-     "start_time": "2024-11-18T20:04:56.624249",
+     "start_time": "2024-11-19T13:57:06.759173",
      "status": "completed"
     },
     "tags": []
@@ -136,19 +136,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "19d9858c",
+   "id": "354a8255",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-18T20:04:56.655239Z",
-     "iopub.status.busy": "2024-11-18T20:04:56.654803Z",
-     "iopub.status.idle": "2024-11-18T20:04:56.668855Z",
-     "shell.execute_reply": "2024-11-18T20:04:56.667803Z"
+     "iopub.execute_input": "2024-11-19T13:57:06.800209Z",
+     "iopub.status.busy": "2024-11-19T13:57:06.799580Z",
+     "iopub.status.idle": "2024-11-19T13:57:06.824844Z",
+     "shell.execute_reply": "2024-11-19T13:57:06.823503Z"
     },
     "papermill": {
-     "duration": 0.021709,
-     "end_time": "2024-11-18T20:04:56.671354",
+     "duration": 0.038189,
+     "end_time": "2024-11-19T13:57:06.828320",
      "exception": false,
-     "start_time": "2024-11-18T20:04:56.649645",
+     "start_time": "2024-11-19T13:57:06.790131",
      "status": "completed"
     },
     "tags": []
@@ -158,7 +158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(numerical_cols): 370\n",
+      "len(numerical_cols): 368\n",
       "len(categorical_cols): 5\n"
      ]
     }
@@ -238,7 +238,7 @@
     "    models=catboost_artifacts[\"models\"],\n",
     "    numerical_cols=catboost_artifacts[\"numerical_cols\"],\n",
     "    categorical_cols=catboost_artifacts[\"categorical_cols\"],\n",
-    "    text_cols=[\"LudRules\"],\n",
+    "    # text_cols=[\"LudRules\"],\n",
     "    encoder=catboost_artifacts[\"encoder\"],\n",
     "    scaler=catboost_artifacts[\"scaler\"],\n",
     ")"
@@ -247,19 +247,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7e16201d",
+   "id": "153fa6a0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-18T20:04:56.680013Z",
-     "iopub.status.busy": "2024-11-18T20:04:56.679466Z",
-     "iopub.status.idle": "2024-11-18T20:04:56.899714Z",
-     "shell.execute_reply": "2024-11-18T20:04:56.898723Z"
+     "iopub.execute_input": "2024-11-19T13:57:06.847164Z",
+     "iopub.status.busy": "2024-11-19T13:57:06.843871Z",
+     "iopub.status.idle": "2024-11-19T13:57:07.114253Z",
+     "shell.execute_reply": "2024-11-19T13:57:07.113041Z"
     },
     "papermill": {
-     "duration": 0.227423,
-     "end_time": "2024-11-18T20:04:56.902073",
+     "duration": 0.281959,
+     "end_time": "2024-11-19T13:57:07.116896",
      "exception": false,
-     "start_time": "2024-11-18T20:04:56.674650",
+     "start_time": "2024-11-19T13:57:06.834937",
      "status": "completed"
     },
     "tags": []
@@ -268,7 +268,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 0.14739358, -0.1419315 , -0.06667329])"
+       "array([ 0.10484537, -0.15667441, -0.06631873])"
       ]
      },
      "execution_count": 5,
@@ -284,13 +284,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7597e1d",
+   "id": "a17bb4ab",
    "metadata": {
     "papermill": {
-     "duration": 0.003057,
-     "end_time": "2024-11-18T20:04:56.908479",
+     "duration": 0.003215,
+     "end_time": "2024-11-19T13:57:07.123580",
      "exception": false,
-     "start_time": "2024-11-18T20:04:56.905422",
+     "start_time": "2024-11-19T13:57:07.120365",
      "status": "completed"
     },
     "tags": []
@@ -303,19 +303,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "82531b0b",
+   "id": "ba258115",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-18T20:04:56.916437Z",
-     "iopub.status.busy": "2024-11-18T20:04:56.916039Z",
-     "iopub.status.idle": "2024-11-18T20:04:57.418979Z",
-     "shell.execute_reply": "2024-11-18T20:04:57.417708Z"
+     "iopub.execute_input": "2024-11-19T13:57:07.132101Z",
+     "iopub.status.busy": "2024-11-19T13:57:07.131664Z",
+     "iopub.status.idle": "2024-11-19T13:57:07.693136Z",
+     "shell.execute_reply": "2024-11-19T13:57:07.691279Z"
     },
     "papermill": {
-     "duration": 0.509897,
-     "end_time": "2024-11-18T20:04:57.421531",
+     "duration": 0.568994,
+     "end_time": "2024-11-19T13:57:07.696045",
      "exception": false,
-     "start_time": "2024-11-18T20:04:56.911634",
+     "start_time": "2024-11-19T13:57:07.127051",
      "status": "completed"
     },
     "tags": []
@@ -330,19 +330,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ec9e4731",
+   "id": "d9d225eb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-18T20:04:57.430224Z",
-     "iopub.status.busy": "2024-11-18T20:04:57.429686Z",
-     "iopub.status.idle": "2024-11-18T20:04:57.435368Z",
-     "shell.execute_reply": "2024-11-18T20:04:57.434307Z"
+     "iopub.execute_input": "2024-11-19T13:57:07.705946Z",
+     "iopub.status.busy": "2024-11-19T13:57:07.705344Z",
+     "iopub.status.idle": "2024-11-19T13:57:07.711336Z",
+     "shell.execute_reply": "2024-11-19T13:57:07.710087Z"
     },
     "papermill": {
-     "duration": 0.012247,
-     "end_time": "2024-11-18T20:04:57.437433",
+     "duration": 0.01412,
+     "end_time": "2024-11-19T13:57:07.713943",
      "exception": false,
-     "start_time": "2024-11-18T20:04:57.425186",
+     "start_time": "2024-11-19T13:57:07.699823",
      "status": "completed"
     },
     "tags": []
@@ -359,19 +359,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dbfe42bd",
+   "id": "fd7d43cf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-18T20:04:57.446412Z",
-     "iopub.status.busy": "2024-11-18T20:04:57.445359Z",
-     "iopub.status.idle": "2024-11-18T20:04:58.087327Z",
-     "shell.execute_reply": "2024-11-18T20:04:58.086259Z"
+     "iopub.execute_input": "2024-11-19T13:57:07.723148Z",
+     "iopub.status.busy": "2024-11-19T13:57:07.722743Z",
+     "iopub.status.idle": "2024-11-19T13:57:08.355901Z",
+     "shell.execute_reply": "2024-11-19T13:57:08.354579Z"
     },
     "papermill": {
-     "duration": 0.648972,
-     "end_time": "2024-11-18T20:04:58.089737",
+     "duration": 0.640825,
+     "end_time": "2024-11-19T13:57:08.358638",
      "exception": false,
-     "start_time": "2024-11-18T20:04:57.440765",
+     "start_time": "2024-11-19T13:57:07.717813",
      "status": "completed"
     },
     "tags": []
@@ -393,13 +393,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "453f0b1d",
+   "id": "5cc5a482",
    "metadata": {
     "papermill": {
-     "duration": 0.00396,
-     "end_time": "2024-11-18T20:04:58.097455",
+     "duration": 0.005188,
+     "end_time": "2024-11-19T13:57:08.367825",
      "exception": false,
-     "start_time": "2024-11-18T20:04:58.093495",
+     "start_time": "2024-11-19T13:57:08.362637",
      "status": "completed"
     },
     "tags": []
@@ -420,7 +420,7 @@
     },
     {
      "datasetId": 5909723,
-     "sourceId": 9945169,
+     "sourceId": 9952150,
      "sourceType": "datasetVersion"
     }
    ],
@@ -449,14 +449,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 11.046243,
-   "end_time": "2024-11-18T20:04:58.821613",
+   "duration": 10.978982,
+   "end_time": "2024-11-19T13:57:09.194800",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-18T20:04:47.775370",
+   "start_time": "2024-11-19T13:56:58.215818",
    "version": "2.6.0"
   }
  },
