--- a/train/dt-custom.ipynb
+++ b/train/dt-custom.ipynb
@@ -377,8 +377,8 @@
     "            print(f'{Fore.GREEN}{Style.BRIGHT}\\nFold {fi} | rmse: {rmse}\\n')\n",
     "\n",
     "            oof[valid_idx] = oof_preds\n",
-    "            oof_df.loc[valid_idx, f'{target}_true'] = oof_preds\n",
-    "            oof_df.loc[valid_idx, f'{target}_pred'] = y.iloc[valid_idx]  \n",
+    "            oof_df.loc[valid_idx, f'{target}_true'] = y.iloc[valid_idx]\n",
+    "            oof_df.loc[valid_idx, f'{target}_pred'] = oof_preds \n",
     "            oof_df.loc[valid_idx, 'fold'] = fi\n",
     "        else:\n",
     "            raise ValueError(\"Neural network model not enabled in CFG.\")\n",
@@ -1214,7 +1214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.14"
   },
   "papermill": {
    "default_parameters": {},
