--- a/exploration/feat_selection.ipynb
+++ b/exploration/feat_selection.ipynb
@@ -32,6 +32,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "### feature selection overlap"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -181,7 +189,7 @@
    "metadata": {},
    "source": [
     "***\n",
-    "## importance selection"
+    "### importance selection"
    ]
   },
   {
